--- a/zet_cetera/tmux_setting/.tmux.conf
+++ b/zet_cetera/tmux_setting/.tmux.conf
@@ -122,7 +122,7 @@ set -g default-terminal "xterm"
 # THEME : Powerline
 #=========================================================
 #
-# Powerline Double Cyan - Tmux Theme
+# Powerline Double Yellow - Tmux Theme
 # Created by Jim Myhrberg <contact@jimeh.me>.
 #
 # Inspired by vim-powerline: https://github.com/Lokaltog/powerline
@@ -142,24 +142,24 @@ set -g status-bg colour233
 set -g status-left-bg colour233
 set -g status-left-fg colour243
 set -g status-left-length 40
-set -g status-left "#[fg=colour233,bg=colour39,bold] #S #[fg=colour39,bg=colour240,nobold]#[fg=colour233,bg=colour240] #(whoami) #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] #I:#P #[fg=colour235,bg=colour233,nobold]"
+set -g status-left "#[fg=colour233,bg=colour227,bold] #S #[fg=colour227,bg=colour240,nobold]#[fg=colour233,bg=colour240] #(whoami) #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] #I:#P #[fg=colour235,bg=colour233,nobold]"
 
 # Right side of status bar
 set -g status-right-bg colour233
 set -g status-right-fg colour243
 set -g status-right-length 150
-set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour39,bg=colour240]#[fg=colour233,bg=colour39,bold] #H "
+set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour227,bg=colour240]#[fg=colour233,bg=colour227,bold] #H "
 
 # Window status
 set -g window-status-format "  #I:#W#F  "
-set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour81,nobold] #I:#W#F #[fg=colour233,bg=black,nobold]"
+set -g window-status-current-format "#[fg=colour233,bg=black]#[fg=colour227,nobold] #I:#W#F #[fg=colour233,bg=black,nobold]"
 
 # Current window status
-set -g window-status-current-bg colour39
+set -g window-status-current-bg colour227
 set -g window-status-current-fg colour235
 
 # Window with activity status
-set -g window-status-activity-bg colour75 # fg and bg are flipped here due to
+set -g window-status-activity-bg colour229 # fg and bg are flipped here due to
 set -g window-status-activity-fg colour233 # a bug in tmux
 
 # Window separator
@@ -174,18 +174,18 @@ set -g pane-border-fg colour238
 
 # Active pane border
 set -g pane-active-border-bg default
-set -g pane-active-border-fg colour39
+set -g pane-active-border-fg colour227
 
 # Pane number indicator
 set -g display-panes-colour colour233
 set -g display-panes-active-colour colour245
 
 # Clock mode
-set -g clock-mode-colour colour39
+set -g clock-mode-colour colour227
 set -g clock-mode-style 24
 
 # Message
-set -g message-bg colour39
+set -g message-bg colour227
 set -g message-fg black
 
 # Command message
@@ -193,5 +193,5 @@ set -g message-command-bg colour233
 set -g message-command-fg black
 
 # Mode
-set -g mode-bg colour39
-set -g mode-fg colour232
+set -g mode-bg colour227
+set -g mode-fg colour235
