--- a/ROS/catkin_ws/src/imu_yaw/CMakeLists.txt
+++ b/ROS/catkin_ws/src/imu_yaw/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 catkin_package(
-  INCLUDE_DIRS include
+ # INCLUDE_DIRS include
   #  LIBRARIES imu_yaw
   CATKIN_DEPENDS roscpp std_msgs
   DEPENDS system_lib
