--- a/ROS/catkin_ws/src/odroid_control_ed/CMakeLists.txt
+++ b/ROS/catkin_ws/src/odroid_control_ed/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 catkin_package(
-  INCLUDE_DIRS include
+ # INCLUDE_DIRS include
   #LIBRARIES odroid_control_ed
   CATKIN_DEPENDS roscpp std_msgs
   DEPENDS system_lib
